--- a/avaino/packages.config
+++ b/avaino/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AvalonEdit" version="5.0.4" targetFramework="net461" />
+  <package id="estebano.ScintillaNET.WPF" version="2.6.0" targetFramework="net461" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net461" />
 </packages>
